force-app/main/default/objects/Invoice_Status_Change__e/Invoice_Status_Change__e.object-meta.xml
<CustomObject>
    <description>Published by InvoiceStatusChangeEventPublisher when Invoice__c.Status__c changes; consumed by the InvoiceStatusChangeSubscriber trigger.</description>
    <label>Invoice Status Change</label>
    <pluralLabel>Invoice Status Changes</pluralLabel>
</CustomObject>