force-app/main/default/objects/Invoice_Status_Change__e/fields/InvoiceId__c.field-meta.xml
<CustomField>
    <fullName>InvoiceId__c</fullName>
    <description>18-character Id of the Invoice__c record whose status changed.</description>
    <label>Invoice Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>