force-app/main/default/objects/Invoice_Status_Change__e/fields/NewStatus__c.field-meta.xml
<CustomField>
    <fullName>NewStatus__c</fullName>
    <description>Invoice__c.Status__c value after the change.</description>
    <label>New Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>