force-app/main/default/objects/Invoice_Status_Change__e/fields/OldStatus__c.field-meta.xml
<CustomField>
    <fullName>OldStatus__c</fullName>
    <description>Invoice__c.Status__c value before the change.</description>
    <label>Old Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>